fix select arrow spacing

--- a/web/src/css/reset.css
+++ b/web/src/css/reset.css
@@ -349,11 +349,11 @@ select {
 	--arrow-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m6 9l6 6l6-6"/></svg>');
 	--select-bg: var(--color-bg-100);
 	--arrow-bg: var(--color-bg-200);
-	--arrow-width: --spacing(8);
+	--arrow-width: 2em;
 	appearance: none;
 	padding: --spacing(2);
 	background:
-		var(--arrow-icon) no-repeat right --spacing(1) center / 1.4em,
+		var(--arrow-icon) no-repeat right .3em center / 1.4em,
 		linear-gradient(to left, var(--arrow-bg) var(--arrow-width), var(--select-bg) var(--arrow-width));
 	cursor: pointer;
 	option {
